<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.basenotesaver.ui.home.HomeFragment"
        android:label="@string/title_activity_base"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_courses" />
    </fragment>


    <fragment
        android:id="@+id/nav_courses"
        android:name="com.example.basenotesaver.ui.gallery.GalleryFragment"
        android:label="Courses"
        tools:layout="@layout/fragment_gallery" />

</navigation>